--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -28,12 +28,12 @@
                 android:src="@drawable/image_1"
                 app:layout_collapseMode="parallax" />
 
-            <!-- <Toolbar
+            <androidx.appcompat.widget.Toolbar
                  android:id="@+id/toolbar"
                  android:layout_width="match_parent"
                  android:layout_height="?attr/actionBarSize"
                  app:layout_collapseMode="pin"
-                 />-->
+                 />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -43,7 +43,6 @@
         android:layout_height="match_parent"
         android:padding="18sp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-
         >
 
         <LinearLayout
@@ -169,6 +168,12 @@
                     android:text="@string/tab_item_comments"
                     />
 
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tab_item_waiting_room"
+                    />
+
             </com.google.android.material.tabs.TabLayout>
 
         </LinearLayout>
@@ -177,14 +182,14 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_completed"
+        android:id="@+id/fab_action"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="end|bottom"
         app:fabSize="normal"
         android:layout_marginEnd="30dp"
-        android:src="@drawable/baseline_done_24"
+        android:src="@drawable/baseline_event_24"
         android:baselineAlignBottom="false"
         android:clickable="true"
         android:focusable="true"
@@ -202,7 +207,7 @@
         android:baselineAlignBottom="false"
         android:clickable="true"
         android:backgroundTint="@color/logo_red"
-
+        android:visibility="invisible"
         android:focusable="true"
         android:contentDescription="@string/txt_event_details_edit_event" />
 
