--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="start"
     android:padding="24sp"
-    android:orientation="vertical"
-    android:scrollbars="vertical"
-    android:scrollbarAlwaysDrawVerticalTrack="true"
     tools:context=".ui.home.HomeFragment">
 
     <TextView
@@ -17,42 +14,65 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:textAlignment="textStart"
+        android:layout_marginBottom="24dp"
         android:text="@string/headline_1"
+        android:textAlignment="textStart"
         android:textSize="20sp"
-        android:layout_marginTop="8sp"
-        android:layout_marginBottom="8sp" />
+        
+        app:layout_constraintBottom_toTopOf="@+id/games_recyclerview"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.122" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/games_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        android:layout_marginTop="8sp"
-        android:layout_marginBottom="8sp"
+        android:layout_marginBottom="24dp"
         android:scrollbars="horizontal"
-        />
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
+        android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="68dp"
         android:text="@string/headline_2"
         android:textAlignment="textStart"
         android:textSize="20sp"
-        android:layout_marginTop="8sp"
-        android:layout_marginBottom="8sp"/>
+        app:layout_constraintBottom_toTopOf="@+id/txt_no_ongoing_event"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/sessions_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_marginTop="8sp"
-        android:layout_marginBottom="8sp"
+        android:layout_marginTop="40dp"
         android:scrollbars="horizontal"
-        />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <TextView
+        android:id="@+id/txt_no_ongoing_event"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="300dp"
+        android:text="@string/event_info"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="invisible" />
 
     <!-- <com.google.android.material.tabs.TabLayout
          android:layout_width="match_parent"
@@ -77,4 +97,4 @@
             android:contentDescription="@string/tab1"
             />
     </com.google.android.material.tabs.TabLayout>-->
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
