add notifications and comments

--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -160,7 +160,7 @@
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/view_pager_content"
                 android:layout_width="match_parent"
-                android:layout_height="468dp" />
+                android:layout_height="match_parent" />
         </LinearLayout>
 
 
