--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="logo_red">#d5613e</color>
     <color name="logo_mehroon">#b43d43</color>
     <color name="back_main">#030829</color>
+    <color name="grey">#f6f7f9</color>
 </resources>
