--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/chat_back"
+    android:background="@color/chat_back"
     android:layout_height="match_parent"
     tools:context=".ui.chat.ChatActivity">
 
@@ -29,7 +29,7 @@
             android:id="@+id/messageBox"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:background="@drawable/msg_box_back"
+            android:background="@color/white"
             android:paddingStart="15dp"
             android:layout_weight="80"
             android:textColor="@color/black"
