--- a/app/src/main/res/layout/user_layout.xml
+++ b/app/src/main/res/layout/user_layout.xml
@@ -10,25 +10,37 @@
         android:layout_width="65dp"
         android:layout_height="75dp"
         android:src="@drawable/avatar"/>
+
     <TextView
         android:id="@+id/txt_name"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
+        android:layout_marginStart="30dp"
         android:layout_toEndOf="@+id/avatar"
         android:gravity="center_vertical"
         android:text="Abhay"
-        android:textColor="@color/white"
+        android:textColor="@color/back_main"
         android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_marginStart="30dp"/>
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/unread"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:layout_marginStart="300dp"
+        android:layout_toEndOf="@+id/avatar"
+        android:gravity="center_vertical"
+        android:text="1"
+        android:textColor="@color/red"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <View
-        android:layout_below="@+id/txt_name"
-        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/white"/>
-
+        android:layout_below="@+id/txt_name"
+        android:layout_marginTop="5dp"
+        android:background="@color/white" />
 
 
 </RelativeLayout>
