--- a/app/src/main/res/layout/recieve.xml
+++ b/app/src/main/res/layout/recieve.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="This is recieved message"
-            android:color="@color/white"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:padding="10dp"/>
 
